--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,24 @@
 html, body, #main-wrapper {
   height: 100%; }
 
+body, .btn {
+  background-color: #222222;
+  color: #eaf4fb;
+  font-family: 'Titillium Web', sans-serif; }
+
+h1 {
+  font-size: 3.5rem; }
+
+.btn {
+  background-color: #2f2f2f;
+  border: 2px solid transparent;
+  font-size: 1.1rem;
+  cursor: pointer; }
+  .btn:hover {
+    background-color: #484848;
+    border: 2px solid #626262;
+    transition: 1s ease; }
+
 progress {
   width: 100%;
   height: 2em; }
