--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,10 @@ html, body, #main-wrapper {
   height: 100%;
 }
 
+#thermostat-wrapper {
+  width: 60%;
+}
+
 body, .btn {
   background-color: $background-col;
   color: $font-col;
@@ -29,9 +33,25 @@ h1 {
     border: 2px solid $btn-hover-border;
     transition: 1s ease;
   }
+  &:focus{
+    box-shadow: none;
+  }
 }
 
 progress {
   width: 100%;
   height: 2em;
+}
+
+#power-savings-indicator {
+  width: 15px;
+  height: 15px;
+  margin: 0 0 0 5px;
+  border: 2px solid $main-tint;
+  border-radius: 100%;
+  transition: 1s ease;
+}
+
+.indicator-bkgrnd {
+  background-color: $main-tint;
 }
