--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,9 @@
 html, body, #main-wrapper {
   height: 100%; }
 
+#thermostat-wrapper {
+  width: 60%; }
+
 body, .btn {
   background-color: #222222;
   color: #eaf4fb;
@@ -18,9 +21,22 @@ h1 {
     background-color: #484848;
     border: 2px solid #626262;
     transition: 1s ease; }
+  .btn:focus {
+    box-shadow: none; }
 
 progress {
   width: 100%;
   height: 2em; }
+
+#power-savings-indicator {
+  width: 15px;
+  height: 15px;
+  margin: 0 0 0 5px;
+  border: 2px solid #eaf4fb;
+  border-radius: 100%;
+  transition: 1s ease; }
+
+.indicator-bkgrnd {
+  background-color: #eaf4fb; }
 
 /*# sourceMappingURL=main.css.map */
