--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,8 +25,25 @@ h1 {
     box-shadow: none; }
 
 progress {
-  width: 100%;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 95%;
   height: 2em; }
+
+progress::-webkit-progress-bar {
+  background-color: inherit;
+  border-left: 0.5px solid #888888;
+  border-right: 0.5px solid #888888; }
+
+progress::-webkit-progress-value {
+  background-color: #eaf4fb;
+  transition: 0.5s ease; }
+
+.usage-text {
+  line-height: 2.4;
+  font-size: 0.9rem;
+  width: 5%;
+  transition: 2s ease; }
 
 #power-savings-indicator {
   width: 15px;
@@ -38,5 +55,14 @@ progress {
 
 .indicator-bkgrnd {
   background-color: #eaf4fb; }
+
+.low-usage {
+  color: #6d40dd; }
+
+.medium-usage {
+  color: #a220c8; }
+
+.high-usage {
+  color: #e236d1; }
 
 /*# sourceMappingURL=main.css.map */
